# HybridWire-Protocol

./: CMakeLists.txt  README.md  example.txt  plan.md
examples/: http_example.cpp
include/: hwp.hpp  hybirdwire.hpp  hybridwire.hpp  hybridwire_protocol.h
include/hwp/: client.hpp  protocol.hpp  server.hpp
src/: HybridClient.cpp  example.cpp  hybridwire.cpp  hybridwire_protocol.cpp  protocol.cpp  server.cpp
